<resources>
    <string name="app_name">Traves</string>

    <string name="text_success">Success</string>
    <string name="text_failed">Failed</string>

    <string name="error_requirement">Requirement</string>
    <string name="error_confirm">Confirmation</string>
    <string name="error_wrong_format">Wrong Format</string>
    <string name="error_min_char">Minimum %1$s Characters</string>


    <string name="text_email_address">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_or">OR</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot password ?</string>
    <string name="text_forgot_password_detail">Please input your email address. We\'ll send reset password instruction to your email.</string>
    <string name="text_dont_have_account">Don\'t have an account ?</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_gplus">Google+</string>
    <string name="congrats">Congratulations! You\'ve completed the quest!</string>
    <string name="success">Success</string>

    <string name="text_signup">Sign Up</string>
    <string name="text_total">Total</string>

    <string name="text_point">Point</string>
    <string name="text_quest">Quest</string>
    <string name="text_scoreboard">Scoreboard</string>
    <string name="text_settings">Settings</string>
    <string name="text_help">Help</string>

    <string name="text_home">Home</string>
    <string name="text_my">My</string>
    <string name="text_description">Description</string>
    <string name="text_pts">pts</string>

    <string name="start_quest">Start Quest</string>
    <string name="submit">Submit</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_message">Are you sure want to logout ? </string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_km">km</string>
    <string name="text_confirmation_code">Kode Konfirmasi</string>

    <string name="text_data_not_found">Data Is Empty</string>
    <string name="text_no_quest_near">No Quest Near You</string>

    <string name="quests_area">Quests Area</string>
    <string name="directions">Directions</string>
    <string name="location_permission_not_granted">Need location permission</string>
    <string name="marker_position_title">You\'re here</string>

    <string name="title_notification">Notification</string>
    <string name="summary_notification">Receive notification while entering quests area.</string>
    <string name="pref_key_notification" translatable="false">key_notification</string>
    <string name="points">Points: $s</string>

    <string name="out_of_range">Sorry, you are out of range</string>
    <string name="notification_title">Quests Found</string>
    <string name="notification_text">Find out what\'s interesting</string>
    <string name="add_pic_text">Take a picture</string>
    <string name="label_treasure">Find Treasure</string>
    <string name="label_quiz">Quiz</string>
    <string name="label_market">Buy Items</string>
    <string name="label_description">Description</string>
    <string name="text_treasure_failed">Barcode didn\'t match</string>

    <string name="delete">Delete</string>
    <string name="retake">Retake</string>
    <string name="delete_picture">Are you sure want to delete this picture ? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="validation_code">Validation Code</string>
</resources>
