<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimens_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_32dp"
                android:text="@string/text_register"
                android:textColor="@color/white"
                android:textSize="@dimen/dimens_40dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_48dp"
                android:text="@string/text_email_address"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittextEmail"
                style="@style/MyEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:maxLines="1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:text="@string/text_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittextPassword"
                style="@style/MyEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:text="@string/text_confirm_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittextConfirmPassword"
                style="@style/MyEditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/signup"
                style="@style/MyButton.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_8dp"
                android:layout_marginTop="@dimen/dimens_32dp"
                android:text="@string/text_register" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</LinearLayout>